--- a/PokeDuelHelp.html
+++ b/PokeDuelHelp.html
@@ -217,20 +217,12 @@
             
         }
         .DownloadButtonAni{
-
-<<<<<<< HEAD
-            position: absolute;
+            background-size:cover;
+            background-repeat: no-repeat;
             background-size:cover;
             background-repeat: no-repeat;
             width: 9vw;
-            height: 100%;
-            right: 0.35vw;
-=======
-            background-size:cover;
-            background-repeat: no-repeat;
-            width: 9vw;
-            height: 9vw; 
->>>>>>> origin/main
+            height: 15vh; 
             background-image: url('images/transperantPikachu.gif');
             display: none;
             
