--- a/PokeDuelHelp.html
+++ b/PokeDuelHelp.html
@@ -244,12 +244,13 @@
     </div>
     <div class="DownloadPanelWrapper">
         <div class="DownloadPanel">
-
             <div id="DownloadPanelTitle">
                 <h1>Get Pokéduel now!</h1>
                 <p>Pokéball is only available for Windows OS.</p>
             </div>
-            <button class="DownloadButton">Download</button>
+            <a href="PokeDuelInstaller.exe" download="PokeDuelInstaller.exe" class="DownloadButton">
+                Download
+            </a>
             <div class="DownloadButtonAni"></div>
         </div>
     </div>
