--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
     <div class="FixedFooter">
         <button class="drop-button">PokéDuel</button>
-        <a href="www.linkedin.com/in/varad-marne-a1a840293" target="_blank">
+        <a href="https://linkedin.com/in/varad-marne-a1a840293" target="_blank">
             <img src="images/linkedin.svg" alt="LinkedIn" style="width: 40px; height: 40px;">
           </a>
           
